# nhl-playoff-odds

./: .gitignore  README.md  start-nhllib
nhllib/: .gitignore  README.md  nhl-lib-current-standings.py  nhl-lib-stats-w-l-ot.py  pyproject.toml
nhllib/deprecated/: nhl-current-standings.py  nhl-daily-scores.py  nhl-remaining-games-by-team.py  nhl-schedule-by-day.py  nhl-season-results-by-team.py  nhl-stats-w-l-ot.py  nhl-todays-games.py
nhllib/nhltools/: cli.py  current_standings.py  daily_scores.py  playoff_odds.backup  playoff_odds.py  remaining_games.py  schedule_by_day.py  season_results_by_team.py  stats_game_scores.py  stats_w_l_ot.py  todays_games.py
