[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nhltools"
version = "0.1.0"
description = "Unified NHL command-line tools built on nhl-api-py"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "nhl-api-py>=2.12.1",
]

[project.scripts]
nhl = "nhltools.cli:main"

[tool.setuptools]
packages = ["nhltools"]
